--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+/.idea
+/.vscode
+/.vagrant
 /node_modules
 /public/hot
 /public/storage
 /storage/*.key
+/storage/mysql-data/
 /vendor
 .env
 .env.backup
@@ -10,3 +14,12 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+_ide_helper.php
+.phpstorm.meta.php
+_ide_helper_models.php
+reports/*
+!reports/.gitkeep
+npm-debug.log
+yarn-error.log
+.phpunit.result.cache
+/tools/**/vendor
