--- a/.env.test
+++ b/.env.test
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel_testing
+DB_DATABASE=adashi_test
 DB_USERNAME=root
-DB_PASSWORD=victor
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
