--- a/.env.example
+++ b/.env.example
@@ -44,5 +44,9 @@ PUSHER_APP_CLUSTER=mt1
 
 AUDITING_ENABLED=true
 
+TMNOTIFY_CLIENT_ID=
+TMNOTIFY_CLIENT_SECRET=
+TMNOTIFY_CLIENT_NAME=Adashi
+
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
