--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,29 @@
-
-image: docker:stable
-services:
-  - docker:dind
-variables:
-  DOCKER_HOST: tcp://docker:2375
-  DOCKER_DRIVER: overlay2
-before_script:
-  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-build:
+cache:
+  key: docker-cache
+staging-build:
+  image: docker:stable
   stage: build
+  cache:
+    key: docker-cache
+  before_script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
-    - docker pull $CI_REGISTRY_IMAGE:latest || true
-    - docker build --cache-from $CI_REGISTRY_IMAGE:latest --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest .
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA" -t "$CI_REGISTRY_IMAGE:latest" .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker push $CI_REGISTRY_IMAGE:latest
+  only:
+    - master
+    - staging
+    
+# deploy-staging:
+#   stage: deploy
+#   script:
+#     - printenv
+#     - sed -i "s|{{image}}|$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA|g" kubernetes.yaml
+#     - echo $KUBE_CONFIG
+#     - echo $KUBE_CONFIG | base64 -d > kubeconfig.yml
+#     - cat kubeconfig.yml
+#     - cat kubernetes.yaml
+#     - kubectl --kubeconfig=kubeconfig.yml -n staging apply -f kubernetes.yaml
+#   only:
+#     - staging
