--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,8 @@ PUSHER_APP_CLUSTER=mt1
 
 AUDITING_ENABLED=true
 
+TMNOTIFY_EMAIL_URL=
+TMNOTIFY_SMS_URL=
 TMNOTIFY_CLIENT_ID=
 TMNOTIFY_CLIENT_SECRET=
 TMNOTIFY_CLIENT_NAME=Adashi
