--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.0",
         "owen-it/laravel-auditing": "^10.0",
         "propaganistas/laravel-disposable-email": "^2.0",
+        "propaganistas/laravel-phone": "^4.2",
         "spatie/laravel-permission": "^3.13"
     },
     "require-dev": {
