--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5",
+        "phpunitgen/console": "^1.2",
         "psalm/plugin-laravel": "^1.3",
         "vimeo/psalm": "^3.12"
     },
