--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.3.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.5",
-        "laravel/framework": "^7.0",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.3",
         "laravel/tinker": "^2.0",
         "owen-it/laravel-auditing": "^10.0",
@@ -22,12 +22,11 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
-        "beyondcode/laravel-query-detector": "^1.3",
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5",
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0",
         "phpunitgen/console": "^1.2",
         "psalm/plugin-laravel": "^1.3",
         "vimeo/psalm": "^3.12"
@@ -49,12 +48,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+            "App\\": "app/",
+            "Database\\Factories\\": "database/seeds",
+            "Database\\Seeders\\": "database/factories"
+        }
     },
     "autoload-dev": {
         "psr-4": {
