--- a/composer.json
+++ b/composer.json
@@ -50,8 +50,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Database\\Factories\\": "database/seeds",
-            "Database\\Seeders\\": "database/factories"
+            "Database\\Factories\\": "database/factories",
+            "Database\\Seeders\\": "database/seeders"
         }
     },
     "autoload-dev": {
