--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,6 @@ TMNOTIFY_CLIENT_NAME=Adashi
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PAYSTACK_PUBLIC_KEY=
+PAYSTACK_SECRET_KEY=
