--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.3",
         "laravel/tinker": "^2.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "owen-it/laravel-auditing": "^10.0",
         "predis/predis": "^1.1",
         "propaganistas/laravel-disposable-email": "^2.0",
