--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "predis/predis": "^1.1",
         "propaganistas/laravel-disposable-email": "^2.0",
         "propaganistas/laravel-phone": "^4.2",
+        "spatie/laravel-json-api-paginate": "^1.9",
         "spatie/laravel-permission": "^3.13"
     },
     "require-dev": {
