--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "phpunit/phpunit": "^9.0",
         "phpunitgen/console": "^1.2",
         "psalm/plugin-laravel": "^1.3",
-        "vimeo/psalm": "^3.12"
+        "vimeo/psalm": "^4.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -47,7 +47,8 @@
         },
         "scripts-dev": {
             "post-update-cmd": [
-                "php artisan ide-helper:generate"
+                "php artisan ide-helper:generate",
+                "@php artisan ide-helper:meta"
             ]
         }
     },
