--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -14,6 +14,11 @@ spec:
       name: http
   type: ClusterIP
 ---
+
+
+
+
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -38,7 +43,7 @@ spec:
     spec:
       containers:
         - name: backend-service
-          image: registry.gitlab.com/tm30/adashi/backend:latest
+          image: {{image}}
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -46,6 +51,10 @@ spec:
       imagePullSecrets:
         - name: gitlab-victor-cred
 ---
+
+
+
+
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
