--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,9 @@ PUSHER_APP_CLUSTER=mt1
 
 AUDITING_ENABLED=true
 
+ARCANEDEV_LOGVIEWER_TOKEN=
+ARCANEDEV_LOGVIEWER_MIDDLEWARE=web,arcanedev_logger
+
 TMNOTIFY_EMAIL_URL=
 TMNOTIFY_SMS_URL=
 TMNOTIFY_CLIENT_ID=
